--- a/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
+++ b/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
@@ -88,8 +88,8 @@
    "source": [
     "#Replace the placeholder values with your actual Db2 hostname, username, and password:\n",
     "dsn_hostname = \"dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net\" # e.g.: \"dashdb-txn-sbox-yp-dal09-04.services.dal.bluemix.net\"\n",
-    "dsn_uid = \"kxt62129\"        # e.g. \"abc12345\"\n",
-    "dsn_pwd = \"0r7ts0w-82r2bf7f\"      # e.g. \"7dBZ3wWt9XN6$o0J\"\n",
+    "dsn_uid = \"{USERNAME}\"        # e.g. \"abc12345\"\n",
+    "dsn_pwd = \"{PASSWORD}\"      # e.g. \"7dBZ3wWt9XN6$o0J\"\n",
     "\n",
     "dsn_driver = \"{IBM DB2 ODBC DRIVER}\"\n",
     "dsn_database = \"BLUDB\"            # e.g. \"BLUDB\"\n",
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DRIVER={IBM DB2 ODBC DRIVER};DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net;PORT=50000;PROTOCOL=TCPIP;UID=kxt62129;PWD=0r7ts0w-82r2bf7f;\n"
+      "DRIVER={IBM DB2 ODBC DRIVER};DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net;PORT=50000;PROTOCOL=TCPIP;UID={USERNAME};PWD={PASSWOD};\n"
      ]
     }
    ],
