--- a/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
+++ b/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DRIVER={IBM DB2 ODBC DRIVER};DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net;PORT=50000;PROTOCOL=TCPIP;UID={USERNAME};PWD={PASSWOD};\n"
+      "DRIVER={IBM DB2 ODBC DRIVER};DATABASE=BLUDB;HOSTNAME=dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net;PORT=50000;PROTOCOL=TCPIP;UID={USERNAME};PWD={PASSWORD};\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to database:  BLUDB as user:  kxt62129 on host:  dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net\n"
+      "Connected to database:  BLUDB as user:  {USERNAME} on host:  dashdb-txn-sbox-yp-dal09-03.services.dal.bluemix.net\n"
      ]
     }
    ],
