--- a/DV0101EN-1-1-1-Introduction-to-Matplotlib-and-Line-Plots-py-v2.0.ipynb
+++ b/DV0101EN-1-1-1-Introduction-to-Matplotlib-and-Line-Plots-py-v2.0.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "button": false,
     "deletable": true,
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -218,11 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xlrd\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b0/16/63576a1a001752e34bf8ea62e367997530dc553b689356b9879339cf45a4/xlrd-1.2.0-py2.py3-none-any.whl (103kB)\n",
-      "\u001b[K     |████████████████████████████████| 112kB 5.2MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: xlrd\n",
-      "Successfully installed xlrd-1.2.0\n",
+      "Requirement already satisfied: xlrd in /home/jupyterlab/conda/envs/python/lib/python3.6/site-packages (1.2.0)\n",
       "Data read into a pandas dataframe!\n"
      ]
     }
@@ -254,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -463,7 +459,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -698,7 +694,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -815,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -839,7 +835,7 @@
        "       2010, 2011, 2012, 2013], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -899,7 +895,7 @@
        "       182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -968,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1015,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1035,7 +1031,7 @@
        "(195, 43)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1203,7 +1199,7 @@
        "[2 rows x 38 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1258,7 +1254,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "button": false,
     "deletable": true,
@@ -1314,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1374,7 +1370,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1709,7 +1705,7 @@
        "[8 rows x 35 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1815,7 +1811,7 @@
        "Name: Country, Length: 195, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2017,7 +2013,7 @@
        "[195 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2069,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "button": false,
     "deletable": true,
@@ -2087,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2269,7 +2265,7 @@
        "[3 rows x 38 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "button": false,
     "deletable": true,
@@ -2314,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2464,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2498,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2557,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "button": false,
     "deletable": true,
@@ -2588,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2641,7 +2637,7 @@
        " '2013']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2671,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -2713,7 +2709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -4263,7 +4259,7 @@
        "[49 rows x 38 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4275,7 +4271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -4603,7 +4599,7 @@
        "[9 rows x 38 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4634,7 +4630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -4776,7 +4772,7 @@
        "[2 rows x 38 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4853,7 +4849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -4891,7 +4887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -4933,7 +4929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5045,7 +5041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5070,7 +5066,7 @@
        "Name: Haiti, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5096,7 +5092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5113,10 +5109,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc5ca52828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f38c574d908>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5153,7 +5149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5206,7 +5202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5304,7 +5300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5429,7 +5425,7 @@
        "[2 rows x 34 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5474,7 +5470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5492,10 +5488,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc5c640b00>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f38b9919be0>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5550,7 +5546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5628,7 +5624,7 @@
        "1984   1527   5704"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5654,7 +5650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -5674,7 +5670,7 @@
        "Text(0.5, 0, 'Years')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5798,7 +5794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {
     "button": false,
     "collapsed": false,
